--- a/components.html
+++ b/components.html
@@ -742,6 +742,34 @@
         </section>
       </section>
 
+      <!-- Page actions -->
+      <section id="page-actions" data-category="Navigation" class="component">
+        <h2>Page actions</h2>
+        <div class="preview">
+          <p class="buttons page-actions">
+            <button>Save</button>
+            <button class="secondary">Lock</button>
+            <button class="secondary">Hide</button>
+            <button class="secondary">Cancel</button>
+          </p>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;p class="buttons page-actions"&gt;
+  &lt;button&gt;Save&lt;/button&gt;
+  &lt;button class="secondary"&gt;Lock&lt;/button&gt;
+  &lt;button class="secondary"&gt;Hide&lt;/button&gt;
+  &lt;button class="secondary"&gt;Cancel&lt;/button&gt;
+&lt;/p&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>This component provides a special case of the <a href="#button-list">button list</a> component for listing actions that one can take on a page. This component works well to designate that its actions pertain to a large chunk of preceding content, usually the main content of the entire page.</li>
+            <li>As with any other button list component, take some time to think about (or better yet, run some user tests to determine) which action users will need most often, and display that one as the primary action. Display all other options as secondary.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Panel links -->
       <section id="panel-links" data-category="Navigation" class="component">
         <h2>Panel links</h2>
