Fix typo in documentation

--- a/components.html
+++ b/components.html
@@ -431,7 +431,7 @@
         </div>
         <details class="markup">
           <summary>Example markup</summary>
-          <code class="language-markup">&lt;textarea data-charr-count="240"&gt;&lt;/textarea&gt;</code>
+          <code class="language-markup">&lt;textarea data-char-count="240"&gt;&lt;/textarea&gt;</code>
         </details>
         <section class="notes">
           <ul>
