--- a/components.html
+++ b/components.html
@@ -678,7 +678,7 @@
               Parent
               <p class="note">Should this page belong to another one? If so, provide the path to that other page here.</p>
             </label>
-            <input id="parent" name="parent" type="text" />
+            <input id="parent" name="parent" type="text" autocomplete="off" />
             <label for="body">
               Body
               <p class="note">You can format your page using <a href="/markdown">Markdown</a>.</p>
@@ -700,7 +700,7 @@
     Parent
     &lt;p class="note"&gt;Should this page belong to another one? &lt;span class="instructions"&gt;If so, provide the path to that other page here.&lt;/span&gt;&lt;/p&gt;
   &lt;/label&gt;
-  &lt;input id="parent" name="parent" type="text" /&gt;
+  &lt;input id="parent" name="parent" type="text" autocomplete="off" /&gt;
   &lt;button&gt;Create Page&lt;/button&gt;
   &lt;label for="body"&gt;
     Body
