Fix favicon link

--- a/foundations.html
+++ b/foundations.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <title>The Fifth World Design System: Foundations</title>
-    <link rel="icon" href="/img/icons/favicon.svg" />
-    <link rel=”mask-icon” href=”/img/icons/favicon.svg” color=”#000000" />
-    <link rel="apple-touch-icon" href="/img/apple-touch-icon.png" />
+    <link rel="icon" href="https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/icons/favicon.svg" />
+    <link rel=”mask-icon” href=”https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/icons/favicon.svg” color=”#000000" />
+    <link rel="apple-touch-icon" href="https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/img/apple-touch-icon.png" />
     <link rel="stylesheet" media="all" href="/css/style.css" />
 
     <meta charset="UTF-8" />
