--- a/components.html
+++ b/components.html
@@ -1747,7 +1747,7 @@
         <h2>Video</h2>
         <div class="preview">
           <div class="video-wrapper">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/j0ke7eOhTJY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/j0ke7eOhTJY" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
           </div>
         </div>
         <details class="markup">
