Markup and documentation for buttons in loading state

--- a/components.html
+++ b/components.html
@@ -54,6 +54,11 @@
             <input type="button" value="Regular" />
           </p>
           <p style="text-align: center;">
+            <button class="loading" disabled>Loading</button>
+            <a href="#button" class="button loading" disabled>Loading</a>
+            <input type="button" class="loading" value="Loading" disabled />
+          </p>
+          <p style="text-align: center;">
             <button class="secondary">Secondary</button>
             <a href="#button" class="button secondary">Secondary</a>
             <input type="button" class="secondary" value="Secondary" />
@@ -68,6 +73,10 @@
           <code class="language-markup">&lt;button&gt;Regular&lt;/button&gt;
 &lt;a href="#button" class="button"&gt;Regular&lt;/a&gt;
 &lt;input type="button" value="Regular" /&gt;
+
+&lt;button class="loading" disabled&gt;Loading&lt;/button&gt;
+&lt;a href="#button" class="button loading" disabled&gt;Loading&lt;/a&gt;
+&lt;input type="button" class="loading" value="Loading" disabled /&gt;
 
 &lt;button class="secondary"&gt;Secondary&lt;/button&gt;
 &lt;a href="#button" class="button secondary"&gt;Secondary&lt;/a&gt;
