Loading style won't work w/ <input type="button" />

--- a/components.html
+++ b/components.html
@@ -56,7 +56,6 @@
           <p style="text-align: center;">
             <button class="loading" disabled>Loading</button>
             <a href="#button" class="button loading" disabled>Loading</a>
-            <input type="button" class="loading" value="Loading" disabled />
           </p>
           <p style="text-align: center;">
             <button class="secondary">Secondary</button>
@@ -76,7 +75,6 @@
 
 &lt;button class="loading" disabled&gt;Loading&lt;/button&gt;
 &lt;a href="#button" class="button loading" disabled&gt;Loading&lt;/a&gt;
-&lt;input type="button" class="loading" value="Loading" disabled /&gt;
 
 &lt;button class="secondary"&gt;Secondary&lt;/button&gt;
 &lt;a href="#button" class="button secondary"&gt;Secondary&lt;/a&gt;
@@ -591,6 +589,7 @@
           <form method="POST" action="#file-upload" enctype="multipart/form-data">
             <label for="file">File</label>
             <input type="file" name="file" id="file" />
+            <button>Send</button>
           </form>
         </div>
         <details class="markup">
