Update markup documentation to new format

--- a/components.html
+++ b/components.html
@@ -844,13 +844,13 @@
           <code class="language-markup">&lt;!-- Use this version when the user has not liked the content yet. --&gt;
 &lt;p class="likes"&gt;
   &lt;a href="/path/to/like/content" class="like" data-unlike="/path/to/unlike/content"&gt;Like&lt;/a&gt;
-  &lt;span class="count"&gt;100&lt;/span&gt; likes
+  &lt;span class="count"&gt;100 likes&lt;/span&gt;
 &lt;/p&gt;
 
 &lt;!-- Use this version when the user has liked the content already. --&gt;
 &lt;p class="likes"&gt;
   &lt;a href="/path/to/unlike/content" class="unlike" data-like="/path/to/like/content"&gt;Unlike&lt;/a&gt;
-  &lt;span class="count"&gt;101&lt;/span&gt; likes
+  &lt;span class="count"&gt;101 likes&lt;/span&gt;
 &lt;/p&gt;</code>
         </details>
         <section class="notes">
