Documentation and markup

--- a/components.html
+++ b/components.html
@@ -1603,6 +1603,33 @@
         </section>
       </section>
 
+      <!-- Example request/response  -->
+      <section id="example-request-response" data-category="Content" class="component">
+        <h2>Example request/response</h2>
+        <div class="preview">
+          <figure class="request-response">
+            <figcaption>Example Request</figcaption>
+            <code class="language-http">POST https://api.thefifthworld.com/v1/pages
+Body
+title=Orality</code>
+          </figure>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;figure class="request-response"&gt;
+  &lt;figcaption&gt;Example Request&lt;/figcaption&gt;
+  &lt;code class="language-http"&gt;POST https://api.thefifthworld.com/v1/pages
+Body
+title=Orality&lt;/code&gt;
+&lt;/figure&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>We use this component in our <a href="https://api.thefifthworld.com/v1/docs">API documentation</a> to provide examples of HTTP requests and responses associated with each endpoint.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Image -->
       <section id="img" data-category="Media" class="component">
         <h2>Image</h2>
