--- a/components.html
+++ b/components.html
@@ -832,11 +832,11 @@
         <div class="preview">
           <p class="likes">
             <a href="#like-unlike" class="like" data-unlike="#like-unlike">Like</a>
-            <span class="count">100</span> likes
+            <span class="count">100 likes</span>
           </p>
           <p class="likes">
             <a href="#like-unlike" class="unlike" data-like="#like-unlike">Unlike</a>
-            <span class="count">101</span> likes
+            <span class="count">101 likes</span>
           </p>
         </div>
         <details class="markup">
