Add markup and documentation

--- a/components.html
+++ b/components.html
@@ -1672,6 +1672,27 @@ title=Orality&lt;/code&gt;
         </section>
       </section>
 
+      <!-- Image preview -->
+      <section id="image-preview" data-category="Media" class="component">
+        <h2>Image preview</h2>
+        <div class="preview">
+          <div class="image-preview">
+            <img src="https://thefifthworld.s3.us-east-2.stackpathstorage.com/design/img/forest.jpg" alt="The Suburban Forest, by Nick Pedersen" />
+          </div>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;div class="image-preview"&gt;
+  &lt;img src="/img/forest.jpg" alt="The Suburban Forest, by Nick Pedersen" /&gt;
+&lt;/div&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>Use this component in conjunction with the <a href="#file-upload">file uplad</a> component to show a previously-uploaded image.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Thumbnail gallery -->
       <section id="thumbnail-gallery" data-category="Media" class="component">
         <h2>Thumbnail gallery</h2>
