Add markup and documentation

--- a/components.html
+++ b/components.html
@@ -1797,6 +1797,55 @@ title=Orality&lt;/code&gt;
         </section>
       </section>
 
+      <!-- Novel listing -->
+      <section id="novel-listing" data-category="Media" class="component">
+        <h2>Novel listing</h2>
+        <div class="preview">
+          <ul class="novel-listing">
+            <li>
+              <a href="#novel-listing">
+                <img src="https://via.placeholder.com/1538x2325" alt="Novel Title" />
+              </a>
+            </li>
+            <li>
+              <a href="#novel-listing">
+                <img src="https://via.placeholder.com/1538x2325" alt="Novel Title" />
+              </a>
+            </li>
+            <li>
+              <a href="#novel-listing">
+                <img src="https://via.placeholder.com/1538x2325" alt="Novel Title" />
+              </a>
+            </li>
+            <li>
+              <a href="#novel-listing">
+                <img src="https://via.placeholder.com/1538x2325" alt="Novel Title" />
+              </a>
+            </li>
+            <li>
+              <a href="#novel-listing">
+                <img src="https://via.placeholder.com/1538x2325" alt="Novel Title" />
+              </a>
+            </li>
+          </ul>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;ul class="novel-listing"&gt;
+  &lt;li&gt;
+    &lt;a href="#novel-listing"&gt;
+      &lt;img src="https://via.placeholder.com/1538x2325" alt="Novel Title" /&gt;
+    &lt;/a&gt;
+  &lt;/li&gt;
+&lt;/ul&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>Use this component to list a collection of novels. Each element should use the novel&rsquo;s cover and link to it.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Video -->
       <section id="video" data-category="Media" class="component">
         <h2>Video</h2>
