Documentation and markup

--- a/components.html
+++ b/components.html
@@ -1693,6 +1693,23 @@ title=Orality&lt;/code&gt;
         </section>
       </section>
 
+      <!-- Cover -->
+      <section id="cover" data-category="Media" class="component">
+        <h2>Cover</h2>
+        <div class="preview">
+          <img src="https://thefifthworld.s3.us-east-2.stackpathstorage.com/uploads/cover.20190916.211340.jpg" alt="Children of Wormwood" class="cover" />
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;img src="cover.jpg" alt="Title" class="cover" /&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>We use this pattern on novel pages (e.g., <em><a href="https://thefifthworld.com/wormwood">Children of Wormwood</a></em>) in place of an ordinary title to give these works a level of visual distinction. You can use this pattern in similar situations, where a work has something like a &ldquo;cover,&rdquo; or other image that provides the title and introduces the subject.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Thumbnail gallery -->
       <section id="thumbnail-gallery" data-category="Media" class="component">
         <h2>Thumbnail gallery</h2>
