Add special data- attribute for mocking a JWT
Really only useful for the design system itself.

--- a/components.html
+++ b/components.html
@@ -1888,7 +1888,7 @@ title=Orality&lt;/code&gt;
       <section id="pulse" data-category="Server/API Interaction" class="component">
         <h2>Pulse</h2>
         <div class="preview">
-          <aside class="message warning pulse">
+          <aside class="message warning pulse" data-mock-jwt>
             <p>Your session will only last for 15 minutes.</p>
           </aside>
         </div>
