--- a/components.html
+++ b/components.html
@@ -331,6 +331,30 @@
         </section>
       </section>
 
+      <!-- Preformatted text -->
+      <section id="pre" data-category="HTML Tags" class="component">
+        <h2>Preformatted text</h2>
+        <div class="preview">
+          <pre><code>## Section heading (h2)
+### Subsection (h3)
+#### Sub-subsection (h4)
+##### Do you really need to go down this deep? (h5)</code></pre>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;pre&gt;&lt;code&gt;## Section heading (h2)
+### Subsection (h3)
+#### Sub-subsection (h4)
+##### Do you really need to go down this deep? (h5)&lt;/code&gt;&lt;/pre&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>We use preformatted text to display code, as with the examples on our <a href="https://thefifthworld.com/markdown">Markdown page</a>.</li>
+            <li>The browser renders everything inside the &lt;pre&gt; tag exactly as written, so you won&rsquo;t always find it possible to follow the spacing conventions that you follow elsewhere in your document. For example, we normally use two spaces for each indentation, but you&rsquo;ll see that we had to abandon that in this example.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Label -->
       <section id="label" data-category="Form elements" class="component">
         <h2>Label</h2>
