Guidance about placeholders

--- a/components.html
+++ b/components.html
@@ -869,6 +869,7 @@
         <section class="notes">
           <ul>
             <li>Use this pattern when presenting pages that appear in a sequence, as in a book or a series of chapters.</li>
+            <li>Use an empty <code>&lt;span&gt;</code> tag as a placeholder when there is no previous page (as in the case of the first page in a sequence) or no next page (as in the case of the last page in a sequence).</li>
           </ul>
         </section>
       </section>
