Move bundle to /lib subdirectory

--- a/components.html
+++ b/components.html
@@ -1995,7 +1995,7 @@ title=Orality&lt;/code&gt;
       </section>
 
     </main>
-    <script src="js/bundle.js"></script>
-    <script src="js/prism.js"></script>
+    <script src="js/lib/bundle.js"></script>
+    <script src="js/lib/prism.js"></script>
   </body>
 </html>
