--- a/foundations.html
+++ b/foundations.html
@@ -216,6 +216,6 @@
         </div>
       </section>
     </main>
-  <script src="js/bundle.js"></script>
+  <script src="js/lib/bundle.js"></script>
   </body>
 </html>
