--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
         <p>Our component library lists and documents all of the components in the design system.</p>
       </a>
     </main>
-    <script src="js/bundle.js"></script>
+    <script src="js/lib/bundle.js"></script>
   </body>
 </html>
