--- a/instructions.html
+++ b/instructions.html
@@ -81,7 +81,7 @@ npm start</code></pre>
       <h2>Finding help on Discord</h2>
       <p>If you want to use the design system for your own project or make contributions to the design system itself but you don&rsquo;t have an account as a member of the Fifth World website, you definitely deserve one! <a href="https://thefifthworld.com/about/membership">Let us know</a> and we&rsquo;ll make sure that you get an invitation. Yuor membership will include access to the official Fifth World Discord server. The <code>#design</code> channel there exists for people who have questions or comments about this design system. We&rsquo;ll happily answer all of your questions there and help you through the process.</p>
     </main>
-    <script src="js/bundle.js"></script>
-    <script src="js/prism.js"></script>
+    <script src="js/lib/bundle.js"></script>
+    <script src="js/lib/prism.js"></script>
   </body>
 </html>
