--- a/templates.html
+++ b/templates.html
@@ -186,7 +186,7 @@
       </section>
 
     </main>
-    <script src="js/bundle.js"></script>
-    <script src="js/prism.js"></script>
+    <script src="js/lib/bundle.js"></script>
+    <script src="js/lib/prism.js"></script>
   </body>
 </html>
