Match comment to displayed title
This makes it much easier to find by searching.

--- a/components.html
+++ b/components.html
@@ -179,7 +179,7 @@
         </section>
       </section>
 
-      <!-- Basic table -->
+      <!-- Table -->
       <section id="table" data-category="HTML Tags" class="component">
         <h2>Table</h2>
         <div class="preview">
