There is no <tcaption> tag, it's <caption>

--- a/components.html
+++ b/components.html
@@ -184,7 +184,7 @@
         <h2>Table</h2>
         <div class="preview">
           <table>
-            <tcaption>Table 1. A limerick</tcaption>
+            <caption>A limerick</caption>
             <thead>
               <tr>
                 <th class="num">#</th>
@@ -1509,7 +1509,7 @@
         <h2>Table with actions column</h2>
         <div class="preview">
           <table>
-            <tcaption><strong>Table 1.</strong> Table with actions column with just one action</tcaption>
+            <caption>Table with actions column with just one action</caption>
             <thead>
               <tr>
                 <th>Text</th>
@@ -1533,7 +1533,7 @@
           </table>
 
           <table>
-            <tcaption><strong>Table 2.</strong> Table with actions column with multiple actions</tcaption>
+            <caption>Table with actions column with multiple actions</caption>
             <thead>
             <tr>
               <th>Text</th>
