Markup and documentation

--- a/components.html
+++ b/components.html
@@ -1774,6 +1774,50 @@ title=Orality&lt;/code&gt;
         </section>
       </section>
 
+      <!-- Infobox  -->
+      <section id="infobox" data-category="Content" class="component">
+        <h2>Infobox</h2>
+        <div class="preview">
+          <dl class="infobox">
+            <div>
+              <dt>Ritual Phrase</dt>
+              <dd>&ldquo;That sounds dangerous&hellip;&rdquo;</dd>
+            </div>
+            <div>
+              <dt>Use</dt>
+              <dd>Introduces danger.</dd>
+            </div>
+            <div>
+              <dt>Available</dt>
+              <dd>After a player describes her character doing something.</dd>
+            </div>
+          </dl>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;dl class="infobox"&gt;
+  &lt;div&gt;
+    &lt;dt&gt;Ritual Phrase&lt;/dt&gt;
+    &lt;dd&gt;&amp;ldquo;That sounds dangerous&amp;hellip;&amp;rdquo;&lt;/dd&gt;
+  &lt;/div&gt;
+  &lt;div&gt;
+    &lt;dt&gt;Use&lt;/dt&gt;
+    &lt;dd&gt;Introduces danger.&lt;/dd&gt;
+  &lt;/div&gt;
+  &lt;div&gt;
+    &lt;dt&gt;Available&lt;/dt&gt;
+    &lt;dd&gt;After a player describes her character doing something.&lt;/dd&gt;
+  &lt;/div&gt;
+&lt;/dl&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>We use the infobox component on some wiki pages to quickly summarize a few standard fields.</li>
+            <li>This component has a lot of versatility for <a href="https://thefifthworld.com/templates">templates</a>.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Image -->
       <section id="img" data-category="Media" class="component">
         <h2>Image</h2>
