Markup for new color swatches

--- a/foundations.html
+++ b/foundations.html
@@ -34,123 +34,363 @@
       </section>
       <section id="colors">
         <h2>Colors</h2>
-        <div class="palettes">
-          <div class="palette red">
-            <h3>Red</h3>
-            <table>
-              <tbody>
-              <tr>
-                <th>Sass</th>
-                <td>$red</td>
-              </tr>
-              <tr>
-                <th>Hex</th>
-                <td>#b92e52</td>
-              </tr>
-              <tr>
-                <th>RGB</th>
-                <td>185, 46, 82</td>
-              </tr>
-              </tbody>
-            </table>
+        <div class="swatches">
+          <div class="greens">
+            <div class="light">
+              <h3>Light green</h3>
+              <table>
+                <tbody>
+                <tr>
+                  <th>Sass</th>
+                  <td>$green-light</td>
+                </tr>
+                <tr>
+                  <th>Hex</th>
+                  <td>#abe982</td>
+                </tr>
+                <tr>
+                  <th>RGB</th>
+                  <td>67, 91, 51</td>
+                </tr>
+                <tr>
+                  <th>CMYK</th>
+                  <td>27, 0, 44, 9</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="base">
+              <h3>Green</h3>
+              <table>
+                <tbody>
+                <tr>
+                  <th>Sass</th>
+                  <td>$green</td>
+                </tr>
+                <tr>
+                  <th>Hex</th>
+                  <td>#44aa00</td>
+                </tr>
+                <tr>
+                  <th>RGB</th>
+                  <td>27, 67, 0</td>
+                </tr>
+                <tr>
+                  <th>CMYK</th>
+                  <td>60, 0, 100, 33</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="dark">
+              <h3>Dark green</h3>
+              <table>
+                <tbody>
+                <tr>
+                  <th>Sass</th>
+                  <td>$green-dark</td>
+                </tr>
+                <tr>
+                  <th>Hex</th>
+                  <td>#09560b</td>
+                </tr>
+                <tr>
+                  <th>RGB</th>
+                  <td>4, 34, 4</td>
+                </tr>
+                <tr>
+                  <th>CMYK</th>
+                  <td>90, 0, 87, 66</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
-          <div class="palette blue">
-            <h3>Blue</h3>
-            <table>
-              <tbody>
-              <tr>
-                <th>Sass</th>
-                <td>$blue</td>
-              </tr>
-              <tr>
-                <th>Hex</th>
-                <td>#4195c0</td>
-              </tr>
-              <tr>
-                <th>RGB</th>
-                <td>65, 149, 192</td>
-              </tr>
-              </tbody>
-            </table>
+          <div class="yellows">
+            <div class="light">
+              <h3>Light yellow</h3>
+              <table>
+                <tbody>
+                <tr>
+                  <th>Sass</th>
+                  <td>$yellow-light</td>
+                </tr>
+                <tr>
+                  <th>Hex</th>
+                  <td>#f0e6be</td>
+                </tr>
+                <tr>
+                  <th>RGB</th>
+                  <td>94, 90, 75</td>
+                </tr>
+                <tr>
+                  <th>CMYK</th>
+                  <td>0, 4, 21, 6</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="base">
+              <h3>Yellow</h3>
+              <table>
+                <tbody>
+                <tr>
+                  <th>Sass</th>
+                  <td>$yellow</td>
+                </tr>
+                <tr>
+                  <th>Hex</th>
+                  <td>#ffcc00</td>
+                </tr>
+                <tr>
+                  <th>RGB</th>
+                  <td>100, 80, 0</td>
+                </tr>
+                <tr>
+                  <th>CMYK</th>
+                  <td>0, 20, 100, 0</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="dark">
+              <h3>Dark yellow</h3>
+              <table>
+                <tbody>
+                <tr>
+                  <th>Sass</th>
+                  <td>$yellow-dark</td>
+                </tr>
+                <tr>
+                  <th>Hex</th>
+                  <td>#86571f</td>
+                </tr>
+                <tr>
+                  <th>RGB</th>
+                  <td>53, 34, 12</td>
+                </tr>
+                <tr>
+                  <th>CMYK</th>
+                  <td>0, 35, 77, 47</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
-          <div class="palette purple">
-            <h3>Purple</h3>
-            <table>
-              <tbody>
-              <tr>
-                <th>Sass</th>
-                <td>$purple</td>
-              </tr>
-              <tr>
-                <th>Hex</th>
-                <td>#7d6289</td>
-              </tr>
-              <tr>
-                <th>RGB</th>
-                <td>125, 98, 137</td>
-              </tr>
-              </tbody>
-            </table>
+          <div class="reds">
+            <div class="light">
+              <h3>Light red</h3>
+              <table>
+                <tbody>
+                <tr>
+                  <th>Sass</th>
+                  <td>$red-light</td>
+                </tr>
+                <tr>
+                  <th>Hex</th>
+                  <td>#e8aaa0</td>
+                </tr>
+                <tr>
+                  <th>RGB</th>
+                  <td>91, 67, 63</td>
+                </tr>
+                <tr>
+                  <th>CMYK</th>
+                  <td>0, 27, 31, 9</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="base">
+              <h3>Red</h3>
+              <table>
+                <tbody>
+                <tr>
+                  <th>Sass</th>
+                  <td>$red</td>
+                </tr>
+                <tr>
+                  <th>Hex</th>
+                  <td>#ff0000</td>
+                </tr>
+                <tr>
+                  <th>RGB</th>
+                  <td>100, 0, 0</td>
+                </tr>
+                <tr>
+                  <th>CMYK</th>
+                  <td>0, 100, 100, 0</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="dark">
+              <h3>Dark red</h3>
+              <table>
+                <tbody>
+                <tr>
+                  <th>Sass</th>
+                  <td>$red-dark</td>
+                </tr>
+                <tr>
+                  <th>Hex</th>
+                  <td>#751a1a</td>
+                </tr>
+                <tr>
+                  <th>RGB</th>
+                  <td>46, 10, 10</td>
+                </tr>
+                <tr>
+                  <th>CMYK</th>
+                  <td>0, 78, 78, 54</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
-          <div class="palette green">
-            <h3>Green</h3>
-            <table>
-              <tbody>
-              <tr>
-                <th>Sass</th>
-                <td>$green</td>
-              </tr>
-              <tr>
-                <th>Hex</th>
-                <td>#2eb950</td>
-              </tr>
-              <tr>
-                <th>RGB</th>
-                <td>46, 185, 80</td>
-              </tr>
-              </tbody>
-            </table>
+          <div class="blues">
+            <div class="SET">
+              <h3>Light blue</h3>
+              <table>
+                <tbody>
+                <tr>
+                  <th>Sass</th>
+                  <td>$blue-light</td>
+                </tr>
+                <tr>
+                  <th>Hex</th>
+                  <td>#a4f5e6</td>
+                </tr>
+                <tr>
+                  <th>RGB</th>
+                  <td>64, 96, 90</td>
+                </tr>
+                <tr>
+                  <th>CMYK</th>
+                  <td>33, 0, 6, 4</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="base">
+              <h3>Blue</h3>
+              <table>
+                <tbody>
+                <tr>
+                  <th>Sass</th>
+                  <td>$blue</td>
+                </tr>
+                <tr>
+                  <th>Hex</th>
+                  <td>#37abc8</td>
+                </tr>
+                <tr>
+                  <th>RGB</th>
+                  <td>22, 67, 78</td>
+                </tr>
+                <tr>
+                  <th>CMYK</th>
+                  <td>73, 15, 0, 22</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="dark">
+              <h3>Dark blue</h3>
+              <table>
+                <tbody>
+                <tr>
+                  <th>Sass</th>
+                  <td>$blue-dark</td>
+                </tr>
+                <tr>
+                  <th>Hex</th>
+                  <td>#124d6f</td>
+                </tr>
+                <tr>
+                  <th>RGB</th>
+                  <td>7, 30, 44</td>
+                </tr>
+                <tr>
+                  <th>CMYK</th>
+                  <td>84, 31, 0, 56</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
-          <div class="palette brown">
-            <h3>Brown</h3>
-            <table>
-              <tbody>
-              <tr>
-                <th>Sass</th>
-                <td>$brown</td>
-              </tr>
-              <tr>
-                <th>Hex</th>
-                <td>#5b3822</td>
-              </tr>
-              <tr>
-                <th>RGB</th>
-                <td>91, 56, 34</td>
-              </tr>
-              </tbody>
-            </table>
-          </div>
-          <div class="palette yellow">
-            <h3>Yellow</h3>
-            <table>
-              <tbody>
-              <tr>
-                <th>Sass</th>
-                <td>$yellow</td>
-              </tr>
-              <tr>
-                <th>Hex</th>
-                <td>#c0c041</td>
-              </tr>
-              <tr>
-                <th>RGB</th>
-                <td>192, 192, 65</td>
-              </tr>
-              </tbody>
-            </table>
+          <div class="grays">
+            <div class="light">
+              <h3>White</h3>
+              <table>
+                <tbody>
+                <tr>
+                  <th>Sass</th>
+                  <td>$white</td>
+                </tr>
+                <tr>
+                  <th>Hex</th>
+                  <td>#ffffff</td>
+                </tr>
+                <tr>
+                  <th>RGB</th>
+                  <td>100, 100, 100</td>
+                </tr>
+                <tr>
+                  <th>CMYK</th>
+                  <td>0, 0, 0</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="base">
+              <h3>Gray</h3>
+              <table>
+                <tbody>
+                <tr>
+                  <th>Sass</th>
+                  <td>$gray</td>
+                </tr>
+                <tr>
+                  <th>Hex</th>
+                  <td>#ffffff</td>
+                </tr>
+                <tr>
+                  <th>RGB</th>
+                  <td>89, 86, 87</td>
+                </tr>
+                <tr>
+                  <th>CMYK</th>
+                  <td>0, 4, 2, 11</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="dark">
+              <h3>Black</h3>
+              <table>
+                <tbody>
+                <tr>
+                  <th>Sass</th>
+                  <td>$black</td>
+                </tr>
+                <tr>
+                  <th>Hex</th>
+                  <td>#1a1a1a</td>
+                </tr>
+                <tr>
+                  <th>RGB</th>
+                  <td>10, 10, 10</td>
+                </tr>
+                <tr>
+                  <th>CMYK</th>
+                  <td>0, 0, 0, 90</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
-        <p>Each of these colors also come in 1/6, 1/3, and 2/3 opacity variations (e.g., <code>$red13</code> gives you <code>$red</code> with 1/3 opacity).</p>
       </section>
       <section id="typography">
         <h2>Typography</h2>
