--- a/foundations.html
+++ b/foundations.html
@@ -36,7 +36,7 @@
         <h2>Colors</h2>
         <div class="swatches">
           <div class="greens">
-            <div class="light">
+            <div class="swatch light">
               <h3>Light green</h3>
               <table>
                 <tbody>
@@ -59,7 +59,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="base">
+            <div class="swatch base">
               <h3>Green</h3>
               <table>
                 <tbody>
@@ -82,7 +82,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="dark">
+            <div class="swatch dark">
               <h3>Dark green</h3>
               <table>
                 <tbody>
@@ -107,7 +107,7 @@
             </div>
           </div>
           <div class="yellows">
-            <div class="light">
+            <div class="swatch light">
               <h3>Light yellow</h3>
               <table>
                 <tbody>
@@ -130,7 +130,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="base">
+            <div class="swatch base">
               <h3>Yellow</h3>
               <table>
                 <tbody>
@@ -153,7 +153,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="dark">
+            <div class="swatch dark">
               <h3>Dark yellow</h3>
               <table>
                 <tbody>
@@ -178,7 +178,7 @@
             </div>
           </div>
           <div class="reds">
-            <div class="light">
+            <div class="swatch light">
               <h3>Light red</h3>
               <table>
                 <tbody>
@@ -201,7 +201,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="base">
+            <div class="swatch base">
               <h3>Red</h3>
               <table>
                 <tbody>
@@ -224,7 +224,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="dark">
+            <div class="swatch dark">
               <h3>Dark red</h3>
               <table>
                 <tbody>
@@ -249,7 +249,7 @@
             </div>
           </div>
           <div class="blues">
-            <div class="SET">
+            <div class="swatch light">
               <h3>Light blue</h3>
               <table>
                 <tbody>
@@ -272,7 +272,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="base">
+            <div class="swatch base">
               <h3>Blue</h3>
               <table>
                 <tbody>
@@ -295,7 +295,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="dark">
+            <div class="swatch dark">
               <h3>Dark blue</h3>
               <table>
                 <tbody>
@@ -320,7 +320,7 @@
             </div>
           </div>
           <div class="grays">
-            <div class="light">
+            <div class="swatch light">
               <h3>White</h3>
               <table>
                 <tbody>
@@ -343,7 +343,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="base">
+            <div class="swatch base">
               <h3>Gray</h3>
               <table>
                 <tbody>
@@ -366,7 +366,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="dark">
+            <div class="swatch dark">
               <h3>Black</h3>
               <table>
                 <tbody>
